<?xml version="1.0"?>
<package>
  <name>laelaps</name>
  <version>2.0.0</version>

  <description>
    The RoadNarrows Laelaps indoor/outdoor robotic platform ROS metapackage.
    This package provides core Laelaps ROS software bundle.
  </description>

  <author email="robin.knight@roadnarrows.com">Robin Knight</author>
  <maintainer email="robin.knight@roadnarrows.com">Robin Knight</maintainer>
  <license>MIT</license>

  <url type="website">http://roadnarrows.com/Laelaps</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>laelaps_control</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
