<?xml version="1.0"?>
<package>
  <name>laelaps_control</name>
  <version>2.0.0</version>
  <description>Provides the laelaps hardware control interface.</description>

  <maintainer email="robin.knight@roadnarrows.com">robin knight</maintainer>
  <license>MIT</license>

  <url type="website">http://github.com/roadnarrows-robotics/laelaps</url>

  <author email="robin.knight@roadnarrows.com">robin knight</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>industrial_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>industrial_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
