<?xml version="1.0"?>
<package>
  <name>laelaps_launch</name>
  <version>1.0.0</version>
  <description>Provides Laelaps ROS launch files.</description>

  <author email="robin.knight@roadnarrows.com">Robin Knight</author>
  <maintainer email="robin.knight@roadnarrows.com">Robin Knight</maintainer>

  <license>MIT</license>

  <url type="website">http://roadnarrows.com</url>
  <url type="website">http://github.com/roadnarrows-robotics/laelaps</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
